Updated Java Codes